tests/files/flow_controller_tests/should_run/083.cmdr
x = 1;
print tanh(x);