tests/files/flow_controller_tests/should_fail/104.cmdr
x = "cat";
print arccsch(x);